--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
+	"python.analysis.typeCheckingMode": "basic",
 	"python.testing.pytestArgs": [
 		"."
 	],
 	"python.testing.unittestEnabled": false,
 	"python.testing.pytestEnabled": true
 }
+
