--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,10 @@
 		"."
 	],
 	"python.testing.unittestEnabled": false,
-	"python.testing.pytestEnabled": true
+	"python.testing.pytestEnabled": true,
+	"github.codespaces.defaultExtensions": [
+		
+		"GitHub.codespaces",
+		"GitHub.vscode-pull-request-github"
+	]
 }
